# orbi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  MANUAL.md  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/kvmql-agent/: Cargo.toml
crates/kvmql-agent/src/: agent.rs  main.rs  protocol.rs
crates/kvmql-auth/: Cargo.toml
crates/kvmql-auth/src/: access.rs  lib.rs  resolver.rs  vault_aws.rs  vault_azure.rs  vault_gcp.rs  vault_hashicorp.rs  vault_k8s.rs  vault_onepassword.rs  vault_sops.rs
crates/kvmql-cli/: Cargo.toml
crates/kvmql-cli/src/: formatter.rs  main.rs  meta_commands.rs  pricing.rs  shell.rs
crates/kvmql-common/: Cargo.toml
crates/kvmql-common/src/: config.rs  error.rs  lib.rs  notification.rs  resource_types.rs  types.rs
crates/kvmql-driver/: Cargo.toml
crates/kvmql-driver/src/: capability.rs  lib.rs  provision.rs  simulate.rs  traits.rs  types.rs
crates/kvmql-driver/src/aws/: cli.rs  mapper.rs  mod.rs  resources.rs
crates/kvmql-driver/src/azure/: cli.rs  mapper.rs  mod.rs  resources.rs
crates/kvmql-driver/src/azure/resources/: discover.rs  mod.rs  provisioners.rs  tests.rs
crates/kvmql-driver/src/cloudflare/: api.rs  mod.rs  resources.rs
crates/kvmql-driver/src/docker/: cli.rs  mod.rs  resources.rs
crates/kvmql-driver/src/firecracker/: client.rs  mapper.rs  mod.rs
crates/kvmql-driver/src/gcp/: mod.rs
crates/kvmql-driver/src/github/: cli.rs  mod.rs  resources.rs
crates/kvmql-driver/src/k8s/: cli.rs  mod.rs  query.rs  resources.rs
crates/kvmql-driver/src/mock/: mod.rs
crates/kvmql-driver/src/ssh/: client.rs  docker.rs  letsencrypt.rs  mod.rs  nginx.rs  resources.rs  systemd.rs
crates/kvmql-driver/src/vmware/: govc.rs  mod.rs  resources.rs  vmrun.rs
crates/kvmql-engine/: Cargo.toml
crates/kvmql-engine/src/: context.rs  errors.rs  executor.rs  lib.rs  network.rs  response.rs  server.rs
crates/kvmql-engine/src/executor/: admin.rs  cost.rs  helpers.rs  mod.rs  query.rs  resource.rs  vm.rs  volume.rs
crates/kvmql-parser/: Cargo.toml
crates/kvmql-parser/src/: ast.rs  display.rs  error.rs  lib.rs  parser.rs  token.rs
crates/kvmql-parser/tests/: grammar_tests.rs
crates/kvmql-registry/: Cargo.toml
crates/kvmql-registry/src/: error.rs  lib.rs  migration.rs  registry.rs  schema.rs
crates/kvmql-registry/src/registry/: mod.rs  read.rs  tests.rs  write.rs
docs/: CHANGELOG.md  SPEC.md  concepts.md  getting-started.md  import-discover.md  network-verification.md  providers.md  recipes.md
editors/vscode/: language-configuration.json  package.json
editors/vscode/syntaxes/: kvmql.tmLanguage.json
examples/: README.md  app-layer.kvmql  aws-stack.kvmql  azure-stack.kvmql  cloudflare-demo.kvmql  demo.kvmql  dr-failover.kvmql  file-provider.kvmql  github-project-setup.kvmql  import-discover.kvmql  kubernetes-deploy.kvmql  multi-env.kvmql  network-verification.kvmql
scripts/: build-release.sh
