[package]
name = "kvmql-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kvmql-agent"
path = "src/main.rs"

[dependencies]
kvmql-common = { workspace = true }
kvmql-driver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
rustls = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
