[package]
name = "kvmql-auth"
version.workspace = true
edition.workspace = true

[dependencies]
kvmql-common = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
